# willow

./: .gitignore  BIOS.md  BUNNY_DEPLOYMENT_TASK.md  CAPTAIN_WILLOW.md  HUMAN_AGENT_ACCOMMODATION.md  IDEAS_SUMMARY.md  MISSION_CONTROL.md  QUICK_START.md  README.md  RESOURCES.md  SESSION_HANDOFF_2025_12_25.md  SESSION_SUMMARY_2025_12_25.md  WILLOW_ORGANIZATION.md  docker-compose.yml  eslint.config.mjs  jest.config.js  load_task_management.py  n8n_compose.yml  n8n_credentials.json  n8n_credentials_fixed.json  package-lock.json  package.json  pyproject.toml  requirements.txt  telegram_echo.json  telegram_echo_minimal.json  test_connections.py  verify_vector_indexes.py
architecture/: grapevine_vision.md
bootstrap/: backup_brain.py  clear_auradb.py  create_vector_index.py  debug_n8n.py  delegation_matrix_workflow.json  deploy_bunny.py  deploy_memory.py  deploy_n8n.py  deploy_organogram.py  deploy_schema.py  economical_audit_agent.json  fix_data.py  grapevine_core_workflow.json  heartbeat_workflow.json  hydrate_graph.py  ingest_handoff.py  jit_agent_workflow.json  load_schema.py  load_task_management.py  log_bootstrap_protocol.py  log_new_ideas.py  log_random_traits_idea.py  log_session_ideas.py  log_swarm_strategy.py  log_tooling_decisions.py  memorize_architecture.py  remote_deploy.py  reset_n8n_db.py  setup_backup_cron.py  sync_atlassian.py  telegram_listener_workflow.json  update_frank_context.py  update_infrastructure_context.py  update_project_context.py  update_tailscale_context.py  verify_graph.py
docs/: AGENT_INTEGRATION_GUIDE.md  AGENT_SWARM_STRATEGY.md  (+12 more)
(+65 files in other folders)
